sizing on tablet for about text fixed

--- a/main.css
+++ b/main.css
@@ -446,7 +446,7 @@ section .section-header {
   .project__cell--image img {
     width: 100%;
     height: auto;
-    max-width: 600px;
+    max-width: 500px;
   }
   .project__cell--desc {
     display: none;
@@ -594,7 +594,7 @@ section .section-header {
     height: auto;
     max-height: 100%;
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
   }
   .about__cell--intro, .about__cell--desc {
     display: flex;
@@ -617,10 +617,11 @@ section .section-header {
     grid-row: 9/11;
   }
   .about__cell--intro p {
-    font-size: 2rem;
+    font-size: 1.4rem;
+    padding-bottom: 10px;
   }
   .about__cell--desc p {
-    line-height: 1.5;
+    line-height: 1.1;
   }
   .about__cell--contact {
     display: flex;
@@ -648,8 +649,12 @@ section .section-header {
   }
 }
 @media screen and (min-width: 1024px) {
+  .about__cell--intro p {
+    font-size: 2rem;
+  }
   .about__cell--desc p {
     font-size: 1.2rem;
+    line-height: 1.5;
   }
   .about__cell--icons img:nth-child(2) {
     padding: 0 20px;
