--- a/scss/components/_main-projects.scss
+++ b/scss/components/_main-projects.scss
@@ -251,7 +251,7 @@
     &__cell--image img {
       width: 100%;
       height: auto;
-      max-width: 600px;
+      max-width: 500px;
       
     }
 
